# payroll-project

./: CMakeLists.txt
cmake/Modules/: FindGTest.cmake
include/affiliations/: affiliations.h  noaffiliation.h  servicecharge.h  unionaffiliation.h
include/classifications/: classifications.h  commisionclassification.h  hourlyclassification.h  salariedclassification.h  salesreceipt.h  timecard.h
include/core/: affiliation.h  core.h  databaseproxy.h  date.h  employee.h  paycheck.h  paymentclassification.h  paymentmethod.h  paymentschedule.h  transaction.h
include/database/: databases.h  factory.h  memorypayrolldatabase.h
include/methods/: mailmethod.h  methods.h
include/payrollGUI/: AddCommisionedDlg.h  AddHourlyEmployeeDlg.h  AddSalariedEmployeeDlg.h  AddSalesReceiptsDlg.h  AddTimeCardDlg.h  ChangAsCommisionedDlg.h  ChangAsHourlyEmployeeDlg.h  ChangAsSalariedDlg.h  ChangeEmployeeAddressDlg.h  ChangeNameDlg.h  DeleteEmployeeById.h  EmployeeListDlg.h  MainFrm.h  PayrollGUI.h  PayrollGUIDoc.h  PayrollGUIView.h
include/schedules/: biweeklyschedule.h  monthschedule.h  schedules.h  weeklyschedule.h
include/transactions/: addcommisionemployee.h  addemployeetransaction.h  addhourlyemployee.h  addsalariedemployee.h  browerallemployee.h  changeaddresstransaction.h  changeclassificationtransaction.h  changecommisionedtransaction.h  changeemployeetransaction.h  changehourlytransaction.h  changenametransaction.h  changesalariedtransaction.h  deleteemployeetransaction.h  loadtransaction.h  paydaytransaction.h  proxy.h  salesreceipttransaction.h  savetransaction.h  servicechargetransaction.h  timecardtransaction.h  transactions.h
src/affiliations/: CMakeLists.txt  noaffiliation.cpp  servicecharge.cpp  unionaffiliation.cpp
src/classifications/: CMakeLists.txt  commisionclassification.cpp  hourlyclassification.cpp  salariedclassification.cpp  salesreceipt.cpp  timecard.cpp
src/core/: CMakeLists.txt  affiliation.cpp  databaseproxy.cpp  date.cpp  employee.cpp  paycheck.cpp  paymentclassification.cpp  paymentmethod.cpp  paymentschedule.cpp  transaction.cpp
src/database/: CMakeLists.txt  factory.cpp  memorypayrolldatabase.cpp
src/methods/: CMakeLists.txt  mailmethod.cpp
src/payrollGUI/: CMakeLists.txt  addcommisionedemployeedialog.cpp  addcommisionedemployeedialog.h  addcommisionedemployeedialog.ui  addhourlyemployeedialog.cpp  addhourlyemployeedialog.h  addhourlyemployeedialog.ui  addsalariedemployeedialog.cpp  addsalariedemployeedialog.h  addsalariedemployeedialog.ui  addsalesreceiptsdialog.cpp  addsalesreceiptsdialog.h  addsalesreceiptsdialog.ui  addtimecarddialog.cpp  addtimecarddialog.h  addtimecarddialog.ui  changascommisioneddialog.cpp  changascommisioneddialog.h  changascommisioneddialog.ui  changashourlyemployeedialog.cpp  changashourlyemployeedialog.h  changashourlyemployeedialog.ui  changassalarieddialog.cpp  changassalarieddialog.h  changassalarieddialog.ui  changeemployeeaddressdialog.cpp  changeemployeeaddressdialog.h  changeemployeeaddressdialog.ui  changenamedialog.cpp  changenamedialog.h  changenamedialog.ui  deleteemployeebyiddialog.cpp  deleteemployeebyiddialog.h  deleteemployeebyiddialog.ui  employeelistdialog.cpp  employeelistdialog.h  employeelistdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  (+1 more)
src/schedules/: CMakeLists.txt  biweeklyschedule.cpp  monthschedule.cpp  weeklyschedule.cpp
src/test/: CMakeLists.txt  unittest.cpp
src/transactions/: CMakeLists.txt  addcommisionemployee.cpp  addemployeetransaction.cpp  addhourlyemployee.cpp  addsalariedemployee.cpp  browerallemployee.cpp  changeaddresstransaction.cpp  changeclassificationtransaction.cpp  changecommisionedtransaction.cpp  changeemployeetransaction.cpp  changehourlytransaction.cpp  changenametransaction.cpp  changesalariedtransaction.cpp  deleteemployeetransaction.cpp  loadtransaction.cpp  paydaytransaction.cpp  proxy.cpp  salesreceipttransaction.cpp  savetransaction.cpp  servicechargetransaction.cpp  timecardtransaction.cpp
